tests/testcases/tickets/Jira3151.cfc
<cfscript>
component extends="org.railo.cfml.test.RailoTestCase"	{
	
	//public function beforeTests(){}
	
	//public function afterTests(){}
	
	//public function setUp(){}

	public void function testArrayEach(){
		var a = ["a"];
		a[3] = "c";

		a.each(function(v,i,a){
			writedump(arguments);
		});
		/*assertEquals("","");
		
		try{
			// error
			fail("");
		}
		catch(local.exp){}*/
	}
} 
</cfscript>